2006-02-10  Olivier Jolly  <olivier.jolly@pcedev.com>

	* gnu/testlet/java/io/ObjectInputOutput/HierarchyTest.java: New test
	on abstract constructor calls in deserialization.
	* gnu/testlet/java/io/ObjectInputOutput/ProxySerializationTest.java:
	New test on proxy serialization.

2006-02-09  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/java/security/key/rsa/TestOfRSACodec.java: Aligned
	with gnu.testlet.gnu.java.security.key.dss.TestOfDSSCodec.
	* gnu/testlet/gnu/java/security/key/dss/TestOfDSSCodec.java (setUp):
	Instantiate and setup the key-pair generator once.
	(testUnknownKeyPairCodec): Moved the key-pair generator setup to setUp().
	(testKeyPairRawCodec): Likewise.
	(testKeyPairASN1Codec): Likewise.
	(testPublicKeyValueOf): Likewise.
	(testPrivateKeyValueOf): Likewise.
	* gnu/testlet/gnu/java/security/jce/TestOfFormat.java (testDSSSymmetry):
	Renamed from testSymmetry.
	(testRSASymmetry): New method.
	(test): Added call to new method.

2006-02-09  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/text/View/TestView.java: New helper class.
	* gnu/testlet/javax/swing/text/View/getAlignment.java,
	* gnu/testlet/javax/swing/text/View/getMaximumSpan.java,
	* gnu/testlet/javax/swing/text/View/getMinimumSpan.java,
	* gnu/testlet/javax/swing/text/View/getResizeWeight.java:
	New tests.

2006-02-08  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/io/ObjectInputOutput/LoopSerializationTest.java:
	Added Uses.

2006-02-08  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/SpinnerDateModel/constructors.java: New file,
	* gnu/testlet/javax/swing/SpinnerDateModel/getNextValue.java: Likewise,
	* gnu/testlet/javax/swing/SpinnerDateModel/getPreviousValue.java: Likewise,
	* gnu/testlet/javax/swing/SpinnerDateModel/setEnd.java: Likewise,
	* gnu/testlet/javax/swing/SpinnerDateModel/setStart.java: Likewise,
	* gnu/testlet/javax/swing/SpinnerDateModel/setValue.java: Likewise,